--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml/" href="/src/assets/4.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Beauty At Homes</title>
+    <meta name="google-site-verification" content="zTHcKltPGFEGK4F-JdVUBLAiKZ7-n9C7p3Yt6fOY3gA" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
