--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml/" href="/src/assets/4.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty At Homes</title>
+    <title>Beauty At Homes Best Beauty Services in Amritsar - Book Online Now</title>
+    <meta name="description" content="Book top beauty services in Amritsar online. Get skincare, makeup, and salon treatments with easy online booking and secure payment options Witgh Payment After Service get  the amazing discount .">
+ 
+    <meta name="keywords" content="beauty services Amritsar, salon booking online, skincare treatments, bridal makeup Amritsar, hair spa services, facial booking online, parlor services near me, beauty parlor in Amritsar, waxing and threading, hair styling Amritsar Bleach + Facial + Full Leg Wax + Arm Wax + Underarms + Threading (Upper Lips & Forehead), Bleach + Facial + Manicure + Pedicure ,Lotus Facial,Gold Facial, Diamond Facial , Bridal Facial,Fruit Facial,Winwe Facial , Date Facial, Fruit Facial , Aloe Vera Facial , Hair cuts & trimming in amritsar , Hair Cutting statrs  from 500m,Trimming _ haeadwash  , Rebonding , Rebonf=ding+Keratain , Highlight  ,Kera smooth Treatment , Global Heighlighs  ,Hair - wash , Any hairsyle  staring at 600  ,Manicure + Pedicure , Nail Cut + File + Foot Massage – ₹500, haircut at home, rebonding treatment at home, keratin hair spa, global highlights with keratin, keratin smoothing treatment, hairstyling for parties, home hair spa service
+cheap and afordable  prices 
+">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Sandeep Kumar ">
+ 
+    <meta property="og:title" content="Best Beauty Services in Amritsar - Book Online Now">
+    <meta property="og:description" content="Find the best beauty parlors Service in Amritsar. Book skincare, makeup, and salon services online with expert professionals.">
+    <meta property="og:url" content="https://www.beautyathomes.in/">
+    <meta property="og:type" content="website">
+    
+
     <meta name="google-site-verification" content="zTHcKltPGFEGK4F-JdVUBLAiKZ7-n9C7p3Yt6fOY3gA" />
   </head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LT10GR06ZC"></script>
